--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 					<button type="button" class="btn btn-default botoncito">REGÍSTRATE</button>
 					<div class="row">
 						<div class="col-sm-12 col-md-12">
-							<div class="col-md-4 white-line">
+							<div class="col-xs-4 col-md-4 white-line">
 								__________________
 							</div>
-							<div class="col-md-4">
+							<div class="col-xs-4 col-md-4">
 								<p class="white-text">O bien</p>
 							</div>
-							<div class="col-md-4 white-line">
+							<div class="col-xs-4 col-md-4 white-line">
 								__________________
 							</div>
 						</div>
@@ -92,6 +92,26 @@
 					
 				</div>
 			</div>
+		</div>
+	</section>
+	<!-- Sección conductor -->
+	<section class="driver">
+		<div class="row">
+			<div class=" col-md-offset-8 col-md-4 background-clear container-fluid">
+				<div class="row">
+					<div class="col-md-offset-2 col-md-8">
+						<h3 class="drive">Conduce cuando quieras</h3>
+						<p class="drive-text">LabCar es una opción flexible para alcanzar tus metas financieras.</p>
+						<button type="button" class="btn btn-warning driver-button">Conviértete en conductor</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Sección del Mapa -->
+	<section class="map">
+		<div class="row">
+			
 		</div>
 	</section>
 
