--- a/index.html
+++ b/index.html
@@ -110,8 +110,40 @@
 	</section>
 	<!-- Sección del Mapa -->
 	<section class="map">
-		<div class="row">
-			
+		<div class="row prices">
+			<div class="hidden-xs col-md-offset-1 col-md-4">
+				<h3 class="price">Tarifas</h3>
+				<h4 class="price-subtitle">Consulta las tarifas LabCar aquí</h4>
+					<div class="row shapes">
+						<div class="col-md-offset-1">
+							<!-- Espacio en blanco -->
+						</div>
+						<div class="col-md-1">
+							<img src="assets/images/shape.png" alt="icono-ubicacion">
+						</div>
+						<div class="col-md-10">
+							<input type="text" class="form-control shapes-input" placeholder="Ingrese su punto de partida">
+						</div>
+					</div>
+					<div class="row shapes">
+						<div class="col-md-offset-1">
+							<!-- Espacio en blanco -->
+						</div>
+						<div class="col-md-1">
+							<img src="assets/images/shape2.png" alt="icono-destino">
+						</div>
+						<div class="col-md-10">
+							<input type="text" class="form-control shapes-input" placeholder="Ingrese su destino">
+						</div>
+					</div>
+			</div>
+			<div class="col-md-offset-1">
+							<!-- Espacio en blanco -->
+			</div>
+			<div class="col-md-4">
+				<iframe class="thumbnail" src="https://www.google.cl/maps/place/Latin+America/@-9.0647661,-113.342594,3z/data=!3m1!4b1!4m5!3m4!1s0x90f99effb40af535:0xd2673dbf02a5b69c!8m2!3d-4.4420385!4d-61.3268535?hl=es" frameborder="0" allowfullscreen>
+				</iframe>
+			</div>
 		</div>
 	</section>
 
