finalización de la versión escritorio

--- a/index.html
+++ b/index.html
@@ -178,12 +178,112 @@
 				</div>
 			</div>
 		</div>
+		<!-- Línea -->
 		<div class="row">
 			<div class="container">
-				<hr>
+				<div class="col-xs-12 col-md-12">
+					<hr>
+				</div>
 			</div>
 		</div>
-	</footer>
+		<!-- División de columnas -->
+	<div class="row">
+		<div class="container">
+			<div class="col-xs-4 col-md-3">
+				<a class="footer-icons" href="#">
+					<span class="fa fa-facebook" aria-hidden="true"></span>
+				</a>
+				<a class="footer-icons" href="#">
+					<span class="fa fa-twitter" aria-hidden="true"></span>
+				</a>
+				<a class="footer-icons" href="#">
+					<span class="fa fa-linkedin" aria-hidden="true"></span>
+				</a>
+				<a class="footer-icons" href="#">
+					<span class="fa fa-apple" aria-hidden="true"></span>
+				</a>
+				<a class="footer-icons" href="#">
+					<span class="fa fa-play" aria-hidden="true"></span>
+				</a>
+			</div>
+			<!-- Primera Columna de opciones en el footer -->
+			<div class="col-xs-3 col-md-3">
+				<ul class="footer-list">
+					<li class="lista">
+						<a class="footer-a" href="#">Viaja</a>
+					</li>
+					<li class="lista">
+						<a class="footer-a" href="#">Conduce</a>
+					</li>
+					<li class="lista">
+						<a class="footer-a" href="#">Ciudades</a>
+					</li>
+					<li class="lista">
+						<a class="footer-a" href="#">Entregas</a>
+					</li>
+					<li class="lista">
+						<a class="footer-a" href="#">¿Cómo funciona?</a>
+					</li>
+					<li class="lista">
+						<a class="footer-a" href="#">Países</a>
+					</li>
+					<li class="lista">
+						<a class="footer-a" href="#">Seguridad</a>
+					</li>
+				</ul>
+			</div>
+			<!-- Segunda columna de opciones en el footer -->
+			<div class="hidden-xs col-md-3">
+				<ul class="footer-list2">
+					<li class="lista">
+						<a class="footer-a" href="#">Oportunidades</a>
+					</li>
+					<li class="lista">
+						<a class="footer-a" href="#">Nuestra historia</a>
+					</li>
+					<li class="lista">
+						<a class="footer-a" href="#">API de LabCar</a>
+					</li>
+					<li class="lista">
+						<a class="footer-a" href="#">Eventos</a>
+					</li>
+					<li class="lista">
+						<a class="footer-a" href="#">Desarrolladores</a>
+					</li>
+					<li class="lista">
+						<a class="footer-a" href="#">Servicios</a>
+					</li>
+					<li class="lista">
+						<a class="footer-a" href="#">Laboratoria</a>
+					</li>
+					<li class="lista">
+						<a class="footer-a" href="#">Coders</a>
+					</li>
+				</ul>
+			</div>
+			<!-- Banners de App Store y Google Play Store -->
+			<div class="col-xs-4 col-md-3">
+				<img class="app-gplay" src="assets/images/appstore.png" alt="appstore">
+				<img src="assets/images/enBadgeWebGeneric.png" alt="">
+			</div>
+		</div>
+	</div>
+	<!-- Línea -->
+		<div class="row">
+			<div class="container">
+				<div class="col-xs-12 col-md-12">
+					<hr>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="container">
+				<div class="col-xs-12 col-md-12">
+					<p>Ⓒ 2017 LabCar technologies Inc.</p>
+					</div>
+			</div>
+		</div>
+</footer>
 
 	
 
