--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               <div id="espacio-en-blanco"></div>
             </div>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <div class="col-lg-6 col-md-6 hidden-xs hidden-sm">
         <!-- Margen entre el mapa y el outline -->
           <div class="margin-map">
           <!-- Linea blanca que rodea al mapa -->
@@ -202,6 +202,13 @@
               <iframe class="map-img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64565970.726126164!2d-113.2229628744369!3d-8.991084194615304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x90f99effb40af535%3A0xd2673dbf02a5b69c!2sLatin+America!5e0!3m2!1ses!2scl!4v1512475484054" width="540" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
+        </div>
+        <div class="col-sm-12 col-xs-12 hidden-md hidden-lg">
+          <div class="margin-map">
+            <div class="map-outline" id="map">
+              <iframe class="map-img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64565970.726126164!2d-113.2229628744369!3d-8.991084194615304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x90f99effb40af535%3A0xd2673dbf02a5b69c!2sLatin+America!5e0!3m2!1ses!2scl!4v1512475484054" width="415" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
+            </div>
+          </div
         </div>
       </div>
     </div>
