--- a/index.html
+++ b/index.html
@@ -106,8 +106,28 @@
               <input class="linea" type="text"> <!-- Linea -->
             </div>
             <div>
-              <button class="btn btn-default mt-25 btn-becomeadriver"><strong>Conviértete en un conductor</strong></button>
+              <button class="btn btn-lg btn-default btndriver" data-toggle="modal" data-target="#become"><strong>Conviértete en conductor</strong></button>
             </div>
+            <!-- Modal conviértete en conductor -->
+    <div class="modal fade" id="become" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+      <div class="modal-dialog">
+        <div id="driver-modal">
+          <p>¿Tienes vehículo de 4 puertas?</p>
+          <input class="driver-modal-input" type="number" name="answer" placeholder="Si">
+          <p>Marca</p>
+          <input class="driver-modal-input" type="number" name="brand" placeholder="Elige la marca del vehículo">
+          <p>¿No ves tu vehículo en la lista? Envía un correo electrónico a <a href="#">sociosmdv@uber.com</a></p>
+          <p>Modelo</p>
+          <input class="driver-modal-input" type="number" name="brand" placeholder="Modelo1">
+          <p>Año</p>
+          <input class="driver-modal-input" type="number" name="brand" placeholder="2017">
+          <p>Número de la matrícula</p>
+          <input class="driver-modal-input" type="text" name="brand" placeholder="Número de la matrícula">
+          <p>La información de la matrícula ayuda a los clientes a identificar tu vehículo</p>
+          <button class="btn btn-info send-btn">Enviar</button>
+        </div>
+      </div>
+    </div>
           </div>
           <!-- Cuadro amarillo versión mobile -->
           <div class="cuadrado-amarillo-mobile hidden-lg hidden-md">
@@ -156,7 +176,27 @@
     <div class="col-lg-4 col-lg-offset-8 col-md-4 col-md-offset-8 col-sm-12 col-xs-12 background-clear">
       <p class="mt-25 drive">Conduce cuando quieras</p>
       <p class="mt-25 option">LabCar es una opción flexible para alcanzar tus metas financieras.</p>
-      <button class="btn btn-lg btn-warning btndriver">Conviértete en un conductor</button>
+      <button class="btn btn-lg btn-warning btndriver" data-toggle="modal" data-target="#become">Conviértete en conductor</button>
+    </div>
+    <!-- Modal conviértete en conductor -->
+    <div class="modal fade" id="become" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+      <div class="modal-dialog">
+        <div id="driver-modal">
+          <p>¿Tienes vehículo de 4 puertas?</p>
+          <input class="driver-modal-input" type="number" name="answer" placeholder="Si">
+          <p>Marca</p>
+          <input class="driver-modal-input" type="number" name="brand" placeholder="Elige la marca del vehículo">
+          <p>¿No ves tu vehículo en la lista? Envía un correo electrónico a <a href="#">sociosmdv@uber.com</a></p>
+          <p>Modelo</p>
+          <input class="driver-modal-input" type="number" name="brand" placeholder="Modelo1">
+          <p>Año</p>
+          <input class="driver-modal-input" type="number" name="brand" placeholder="2017">
+          <p>Número de la matrícula</p>
+          <input class="driver-modal-input" type="text" name="brand" placeholder="Número de la matrícula">
+          <p>La información de la matrícula ayuda a los clientes a identificar tu vehículo</p>
+          <button class="btn btn-info send-btn">Enviar</button>
+        </div>
+      </div>
     </div>
   </div>
 </section> <!-- Fin de la sección del conductor -->
@@ -167,7 +207,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
           <p class="mt-50 prices-p"></p>
-          <p class="prices-pp">Colsuta las tarifas LabCar aquí</p>
+          <p class="prices-pp">Consulta las tarifas LabCar aquí</p>
             <div class="row mt-25">
               <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
                 <img src="assets/images/shape.png" alt="origen">
@@ -206,7 +246,7 @@
         <div class="col-sm-12 col-xs-12 hidden-md hidden-lg">
           <div class="margin-map">
             <div class="map-outline" id="map">
-              <iframe class="map-img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64565970.726126164!2d-113.2229628744369!3d-8.991084194615304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x90f99effb40af535%3A0xd2673dbf02a5b69c!2sLatin+America!5e0!3m2!1ses!2scl!4v1512475484054" width="415" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe class="map-img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d64565970.726126164!2d-113.2229628744369!3d-8.991084194615304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x90f99effb40af535%3A0xd2673dbf02a5b69c!2sLatin+America!5e0!3m2!1ses!2scl!4v1512475484054" width="320" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div
         </div>
